--- a/src/views/App.css
+++ b/src/views/App.css
@@ -1,3 +1,24 @@
-.home {
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html,
+body {
+  min-height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
   background-color: rgb(250, 228, 241);
+  overflow-x: hidden;
+}
+
+.container{
+    height: 100vh;
+    display: grid;
+    place-items: center;
+}
+
+h1 {
+    font-size: 8rem;
+    text-transform: uppercase;
+    color: white;
 }
