--- a/src/views/App.css
+++ b/src/views/App.css
@@ -1,3 +1,28 @@
-.home {
-  background-color: rgb(250, 228, 241);
+.App{
+  width: 100vw;
+  height: 100vh;
+/*  background-image: url('./assets/fondo-ecomercee.jpeg');*/
+  background-color: rgb(29, 29, 29);
+  position: absolute;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+}
+
+.nav{
+  width: 100%;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  padding-left: 20px;
+  box-sizing: border-box;
+  margin-top: 10px;
+  text-align: center;
+}
+.nav-items{
+  color: white;
+  margin-left: 20px;
+  text-align: center;
+  text-decoration: underline;
 }
