--- a/src/views/App.css
+++ b/src/views/App.css
@@ -1,6 +1,6 @@
 .App{
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 /*  background-image: url('./assets/fondo-ecomercee.jpeg');*/
   background-color: rgb(29, 29, 29);
   position: absolute;
