--- a/src/views/components/GuitarAnimation/guitarAnimation.css
+++ b/src/views/components/GuitarAnimation/guitarAnimation.css
@@ -1,5 +1,10 @@
 .guitarAnimation {
-  border: 5px solid rgb(202, 202, 202);
+  width: 100%;
   max-height: 1000px;
+  overflow: hidden;
+}
+.guitarAnimation canvas{
+  width: 100%;
+  max-height: 100%;
   overflow: hidden;
 }
