--- a/src/views/App.css
+++ b/src/views/App.css
@@ -1,13 +1,29 @@
-*, p, h1, h2, h3, h4, h5, h6{
+*,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0 0 0 0;
   padding: 0 0 0 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
-.App{
+*::-webkit-scrollbar {
+  background-color: rgb(0, 0, 0);
+  width: 10px;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: rgb(206, 206, 206);
+  border-radius: 10px;
+}
+
+.App {
   width: 100vw;
   min-height: 100vh;
-/*  background-image: url('./assets/fondo-ecomercee.jpeg');*/
-  background-color: rgb(139, 139, 139);
+  /*  background-image: url('./assets/fondo-ecomercee.jpeg');*/
+  background-color: rgb(255, 255, 255);
 }
-
