--- a/src/views/components/GuitarAnimation/guitarAnimation.css
+++ b/src/views/components/GuitarAnimation/guitarAnimation.css
@@ -1,9 +1,9 @@
 .guitarAnimation {
   width: 100%;
-  max-height: 1000px;
   overflow: hidden;
+  background-color: rgb(255, 255, 255);
 }
-.guitarAnimation canvas{
+.guitarAnimation canvas {
   width: 100%;
   max-height: 100%;
   overflow: hidden;
