--- a/src/views/components/GuitarAnimation/guitarAnimation.css
+++ b/src/views/components/GuitarAnimation/guitarAnimation.css
@@ -1,7 +1,8 @@
 .guitarAnimation {
+  height: 100%;
   width: 100%;
   overflow: hidden;
-  background-color: rgb(255, 255, 255);
+  z-index: auto;
 }
 .guitarAnimation canvas {
   width: 100%;
