--- a/src/views/App.css
+++ b/src/views/App.css
@@ -1,9 +1,10 @@
-.App{
-  width: 100%;
-  height: 100%;
-/*  background-image: url('./assets/fondo-ecomercee.jpeg');*/
+body{
   background-color: rgb(29, 29, 29);
-  position: absolute;
+}
+.App{
+  width: 100vw;
+  height: 100vh;
+/*  background-image: url('./assets/fondo-ecomercee.jpeg');*/
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -17,7 +18,7 @@
   flex-direction: row;
   padding-left: 20px;
   box-sizing: border-box;
-  margin-top: 10px;
+  margin-top: 25px;
   text-align: center;
 }
 .nav-items{
