--- a/public/main.css
+++ b/public/main.css
@@ -128,3 +128,11 @@ body::-webkit-scrollbar-thumb {
   padding: 4px 0px;
 }
 
+/*!*************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/views/pages/Profile/login.css ***!
+  \*************************************************************************************/
+.form-group{
+    width:30%;
+    margin: 0 auto;
+    
+}
