--- a/public/main.css
+++ b/public/main.css
@@ -131,8 +131,13 @@ body::-webkit-scrollbar-thumb {
 /*!*************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/views/pages/Profile/login.css ***!
   \*************************************************************************************/
-.form-group{
-    width:30%;
-    margin: 0 auto;
-    
+.form-group {
+  width: 30%;
+  margin: 0 auto;
 }
+
+.imageLogin {
+  margin: 0 auto;
+  width: 100%;
+}
+
