--- a/src/views/pages/Profile/login.css
+++ b/src/views/pages/Profile/login.css
@@ -1,5 +1,9 @@
-.form-group{
-    width:30%;
-    margin: 0 auto;
-    
+.form-group {
+  width: 30%;
+  margin: 0 auto;
+}
+
+.imageLogin {
+  margin: 0 auto;
+  width: 100%;
 }
