Cart view started!

--- a/public/main.css
+++ b/public/main.css
@@ -316,6 +316,10 @@ body::-webkit-scrollbar-thumb {
   transition-delay: 0.75s;
 }
 
+/*!*************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/views/pages/ShoppingCart/shoppingCart.css ***!
+  \*************************************************************************************************/
+
 /*!****************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/views/pages/Dashboard/topbar.css ***!
   \****************************************************************************************/
