--- a/public/main.css
+++ b/public/main.css
@@ -86,13 +86,12 @@ body::-webkit-scrollbar-thumb {
 .guitarAnimation {
   height: 100%;
   width: 100%;
-  overflow: hidden;
   z-index: auto;
 }
 .guitarAnimation canvas {
   width: 100%;
   max-height: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 /*!********************************************************************************************************************!*\
@@ -120,7 +119,7 @@ body::-webkit-scrollbar-thumb {
 }
 .title__content {
   width: 100%;
-  padding-right: 10%;
+  padding-right: 50%;
   padding-top: 3em;
   position: relative;
 }
