--- a/src/views/components/GuitarAnimation/guitarAnimation.css
+++ b/src/views/components/GuitarAnimation/guitarAnimation.css
@@ -1,11 +1,10 @@
 .guitarAnimation {
   height: 100%;
   width: 100%;
-  overflow: hidden;
   z-index: auto;
 }
 .guitarAnimation canvas {
   width: 100%;
   max-height: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
