--- a/public/main.css
+++ b/public/main.css
@@ -319,40 +319,6 @@ body::-webkit-scrollbar-thumb {
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/views/pages/ShoppingCart/shoppingCart.css ***!
   \*************************************************************************************************/
 
-/*!****************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./src/views/pages/Dashboard/topbar.css ***!
-  \****************************************************************************************/
-.topbar {
-  width: 100%;
-  height: 50px;
-  background-color: white;
-}
-
-.topbarWrapper {
-  height: 100%;
-  padding: 0 20px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.topbarRight {
-  display: flex;
-  align-items: center;
-}
-
-.topbarIcons {
-  cursor: pointer;
-  margin-right: 10px;
-  color: rgb(77, 76, 76);
-}
-
-.topbarAvatar {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-}
-
 /*!*****************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/views/pages/Dashboard/sidebar.css ***!
   \*****************************************************************************************/
@@ -561,6 +527,32 @@ body::-webkit-scrollbar-thumb {
   display: flex;
   margin: 20px;
   /* justify-content: space-between; */
+}
+
+/*!*******************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/views/pages/Dashboard/usertable.css ***!
+  \*******************************************************************************************/
+.deleteUser {
+  color: red;
+}
+
+.editUser {
+  color: rgb(30, 170, 30);
+}
+
+/*!**********************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/views/pages/Dashboard/producttable.css ***!
+  \**********************************************************************************************/
+.productTableImg {
+  width: 55px;
+}
+
+.deleteProduct {
+  color: red;
+}
+
+.editProduct {
+  color: rgb(30, 170, 30);
 }
 
 /*!*******************************************************************************************!*\
