--- a/public/main.css
+++ b/public/main.css
@@ -318,7 +318,10 @@ body::-webkit-scrollbar-thumb {
 /*!*************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/views/pages/ShoppingCart/shoppingCart.css ***!
   \*************************************************************************************************/
-
+#checkoutButton {
+    margin-left: 82%;
+    margin-top: 30px;
+}
 /*!*****************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/views/pages/Dashboard/sidebar.css ***!
   \*****************************************************************************************/
