--- a/public/main.css
+++ b/public/main.css
@@ -581,8 +581,8 @@ body::-webkit-scrollbar-thumb {
 
 .creditCard {
   position: relative;
-  height: 90%;
-  width: 100%;
+  height: 240px;
+  width: 400px;
   border-radius: 10px;
   padding: 5%;
   color: white;
