--- a/src/views/components/CreditCard/creditCard.css
+++ b/src/views/components/CreditCard/creditCard.css
@@ -11,8 +11,8 @@
 
 .creditCard {
   position: relative;
-  height: 90%;
-  width: 100%;
+  height: 240px;
+  width: 400px;
   border-radius: 10px;
   padding: 5%;
   color: white;
