user sidebar apparence button

--- a/public/main.css
+++ b/public/main.css
@@ -327,7 +327,7 @@ body::-webkit-scrollbar-thumb {
   \*****************************************************************************************/
 .buttonUser {
   border: 0;
-  background-color: none;
+  background-color: transparent;
 }
 
 .sidebar {
