--- a/public/main.css
+++ b/public/main.css
@@ -642,8 +642,8 @@ body::-webkit-scrollbar-thumb {
 
 .creditCard--Back {
   position: relative;
-  height: 85%;
-  width: 100%;
+  height: 240px;
+  width: 400px;
   border-radius: 10px;
   color: rgb(0, 0, 0);
   display: flex;
