--- a/src/views/components/CreditCard/creditCard.css
+++ b/src/views/components/CreditCard/creditCard.css
@@ -69,8 +69,8 @@
 
 .creditCard--Back {
   position: relative;
-  height: 85%;
-  width: 100%;
+  height: 240px;
+  width: 400px;
   border-radius: 10px;
   color: rgb(0, 0, 0);
   display: flex;
