--- a/public/main.css
+++ b/public/main.css
@@ -26,6 +26,7 @@ body::-webkit-scrollbar-thumb {
 .app {
   width: 100vw;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 /*!**************************************************************************************************!*\
